cli/tests/testdata/run/ts_type_imports.ts.out
Check [WILDCARD]ts_type_imports.ts
error: TS2322 [ERROR]: Type 'Map<string, string>' is not assignable to type 'Foo'.
  Type 'string' is not assignable to type 'number'.
const foo: Foo = new Map<string, string>();
      ~~~
    at [WILDCARD]ts_type_imports.ts:5:7
